--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^5.6",
+    "php": ">5.6",
     "guzzlehttp/guzzle-services": "^1.1",
     "kamermans/guzzle-oauth2-subscriber": "^1.0"
   },
